# fastapi-test

./: README.md  pyproject.toml  settings.json
fastapi-test/apps/common/: endpoints.py
fastapi_test/: app.py
fastapi_test/apps/common/: router.py
